[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arb-finder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "selectolax>=0.3",
    "playwright>=1.44",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "aiokafka>=0.11",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-redis>=4.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["arb_finder"]

[tool.ruff.lint]
# TCH (type-checking imports) dropped: SQLAlchemy 2.0 evaluates Mapped[] annotations
# at runtime via get_type_hints(), so stdlib/third-party imports must not be gated.
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC", "C4", "PT"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
